--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: cpegg's home
 subtitle: 
 description: used for upload personal note
-author: John Doe
+author: cpegg
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: en
 date_format: '%Y-%m-%d'
